ef packages and models added

--- a/EfCore5Practices/appsettings.json
+++ b/EfCore5Practices/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "EfConnectionString": "server=ALPER\\ALPERNET; Initial Catalog=EfPracticesDB; integrated security=true; MultipleActiveResultSets=true;"
+  }
 }
